# vireon-testnet4-proofbench-miner

./: .gitignore  BENCHMARKS.md  CITATION.cff  EVIDENCE.md  LICENSE  README.md  SECURITY.md  pyproject.toml  vireon.toml
.github/workflows/: bench.yml  ci.yml
benches/: bench_hashing.py  bench_header_build.py  bench_stratum.py
scripts/: bench_scan.py  build_evidence_pack.py  live_run.py  live_smoke.py  machine_info.py  probe_live.py
src/vireon_miner/: __init__.py  cli.py  config.py  fastscan_numba.py  hashing.py  job.py  live_client.py  miner.py  protocol.py  scan.py  scan_auto.py  stratum.py
tests/: test_fastscan_consistency.py  test_handshake_local.py  test_job_build.py  test_stratum_codec.py  test_vectors.py
