[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vireon-benchmarked-miner"
version = "0.1.0"
description = "Reproducible, benchmarked Stratum+hashing scaffold with evidence artifacts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-benchmark>=4.0",
]

[project.scripts]
vireon-miner = "vireon_miner.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
